--- a/course-materials/assignments/HW2.qmd
+++ b/course-materials/assignments/HW2.qmd
@@ -6,8 +6,6 @@ subtitle: "Assigned Mon 01/20/2025 | Due Sat 02/01/2025"
 ::: {.callout-important}
 ## You must earn a "Satisfactory" mark for each individual Part (I and II) to earn a "Satisfactory" mark for Assignment #1.
 
-**NOTE:** Assignments are to be submitted via GitHub Classrooms, unless otherwise noted. Each student receives one "free pass" for not submitting assignments via specified channels, after which you will receive a "Not Yet" mark.
-
 **Read each part of the assignment carefully**, and use the check boxes to ensure you've addressed all elements of the assignment!
 :::
 
@@ -16,14 +14,14 @@ subtitle: "Assigned Mon 01/20/2025 | Due Sat 02/01/2025"
 ## Learning Outcomes 
 
 - identify which types of visualizations are most appropriate for your data and your audience
-- prepare (e.g. clean, explore, wrangle) data so that it’s appropriately formatted for building data visualizations
+- prepare (e.g. clean, explore, wrangle) data so that it's appropriately formatted for building data visualizations
 - build effective, responsible, accessible, and aesthetically-pleasing, visualizations using the R programming language, and specifically `{ggplot2}` + ggplot2 extension packages
 
 ## Description 
 
 In class, we discussed strategies and considerations for choosing the right graphic form to represent your data and convey your intended message. Here, you'll apply what we've learned to a data set on lobster abundance and sizes, collected from coastal rocky reef sites within the [Santa Barbara Coastal LTER](https://sbclter.msi.ucsb.edu/){target="_blank"}. 
 
-### 1a. Background reading
+### 1a. Background reading & importing data
 
 Unfold the following note to read more about the data before continuing on (collapsed to save space):
 
@@ -84,7 +82,7 @@ This will first require some data exploration and wrangling. Some tips (unfold b
 ::: {.callout-tip icon=false collapse=true}
 ## Data exploration & wrangling tips
 
-#### Data exploration tips: 
+#### Exploration tips: 
 
 - Use `glimpse()` and / or `str()` to check out your variables and data types
 - Use `names()` to return all column names
@@ -92,9 +90,9 @@ This will first require some data exploration and wrangling. Some tips (unfold b
 - Open up the spreadsheet-style data viewer using `View(df)`
 - Be sure to review the [metadata](https://portal.edirepository.org/nis/metadataviewer?packageid=knb-lter-sbc.77.9){target="_blank"} (including methods & protocols) to fully understand the data
 
-#### Data wrangling tips:
+#### Wrangling tips:
 
-- I love starting all my cleaning pipelines with `janitor::clean_names()` to convert column headers into lowercase snake_case (not necessary, but easy to implement and super helpful for yourself and others)
+- I love starting my cleaning pipelines with `janitor::clean_names()` to convert column headers into lowercase snake_case (not necessary, but easy to implement and super helpful for yourself and others)
 - You'll want to keep just the years of interest
 - Missing size measurements are denoted with `-99999` -- you do not want to leave those values as-is (what's a lobster with -9999 mm carapace length?? {{< fa face-smile title="a smiling face" >}}); consider how to deal with these
 - Each row is **not** always a single observation, but rather summed lobster counts at each size observed within a site / transect / replicate. You'll want to wrangle the data such that each row represents a single lobster observation. You may need to do some Googling to figure out a solution for this (HINT: you're looking to perform the opposite of `count()`).
@@ -103,50 +101,63 @@ This will first require some data exploration and wrangling. Some tips (unfold b
 
 ### 1c. Answer questions
 
-<!-- [**(Part 1a) After exploring and wrangling your data, answer the following questions:**]{.teal-text} -->
+- [ ] **1.** What are your variables of interest and what kinds of data (e.g. numeric, categorical, ordered, etc.) are they (a bullet point list is fine)?
+- [ ] **2.** Using [From Data to Viz](https://www.data-to-viz.com/){target="_blank"}, identify and list which graphic forms / geoms are appropriate, given your data (a bullet point list here is fine). 
+- [ ] **3.** Now that you have a list of options, what are some of your considerations as you decide which type of graph create? For example, is it important / valuable to show sample size? Why or why not? How will you represent multiple groups? etc.
 
-- [ ] **1.** What are your variables of interest and what kinds of data (e.g. numeric, categorical, ordered, etc.) are they? [**(a bullet point list here is fine)**]{.peach-text}
-- [ ] **2.** Using [From Data to Viz](https://www.data-to-viz.com/){target="_blank"}, identify which graphic forms / geoms are appropriate, given your data. List them out. [**(a bullet point list here is fine)**]{.peach-text}
-- [ ] **3.** Now that you have a list of options, what are some of your considerations as you decide which type of graph create? For example, is it important / valuable to show sample size? Why or why not? How will you represent multiple groups? etc. [**(3-4 sentences)**]{.peach-text}
+### 1d. Create data viz
 
 Now that you've explored and starting wrangling your data, it's time to create some plots. It's often important to try out multiple graphic forms (e.g. `geom_*()`s) as you decide which is the most effective way of presenting your data. This process is commonly referred to as **Exploratory Data Analysis or Exploratory Data Visualization**. Some tips (unfold below):
 
 ::: {.callout-tip icon=false collapse=true}
 ## Data viz creation tips
 
-[**Data viz creation tips:**]{.body-text-l .dark-blue-text}
-
 - I always find it helpful to sketch things out on paper first
 - There's no need to create anything special or particularly visually-pleasing during this exploratory visualization phase. It *can* be helpful to make minor modifications, (e.g. rearranging groups in a logical order, color groups, etc.) to help you identify any emerging patterns
 - We created a number of different plot types together in class, exploring different geoms and some of the arguments that each ggplot layer can take. Be sure to take a look back at the lecture materials, but also know that you may need to reference documentation and / or online examples to create / modify your intended visualizations.
 :::
 
-### 1d. Create data viz
-
-<!-- [**(Part 1b) Complete the following:**]{.teal-text} -->
-
 - [ ] Create at least **three** different plots as part of your exploratory data visualization phase to test out which graphic forms / geoms works best. Your last plot should be the version that you feel is best suited for presenting your data. (***NOTE:** Your first two plots do not need to be at all polished -- during the exploratory data visualization phase, we're most concerned with choosing a graphic form / geom(s) for effectively presenting our data.*) 
--  [ ] **1.** Consider all three of your plots. What about the graphic forms / geoms used in plots #1 and #2 was not as effective as plot #3? Justify your decision to pursue plot #3. [**(5-8 sentences)**]{.peach-text}
-- [ ] **2.** (For plot #3 only) Consider modifications that we discussed in lecture that may make this plot easier to interpret (e.g. updating colors, moving or removing legends, highlighting groups, ordering groups) -- be sure to update your plot as appropriate, then explain why you chose to make the above modifications. If you chose not to make any of these modifications, why not? [**(2-5 sentences)**]{.peach-text}
-- [ ] **3.** Polish your third (final) plot by updating the labels and theme (we'll cover theme modifications during [week 4 discussion section](../discussion/week4/week4-slides.qmd#theme){target="_blank"}, so you may consider waiting until then). List out the changes you made to your plot's theme (e.g. "updated axis text size", "removed minor gridlines", etc.). [**(a bullet list here is fine)**]{.peach-text}
-- [ ] **4.** Describe two or more challenges you encountered while deciding on / creating your plots -- these can be conceptual (e.g. challenges in determining how to best represent your data) and / or technical (e.g. code-based challenges). [**(4-8 sentences)**]{.peach-text}
+
+### 1e. Answer (a few more) questions
+
+-  [ ] **1.** Consider all three of your plots. What about the graphic forms / geoms used in plots #1 and #2 was not as effective as plot #3? Justify your decision to pursue plot #3. 
+- [ ] **2.** (For plot #3 only) Consider modifications that we discussed in lecture that may make this plot easier to interpret (e.g. updating colors, moving or removing legends, highlighting groups, ordering groups) -- be sure to update your plot as appropriate, then explain why you chose to make the above modifications. If you chose not to make any of these modifications, why not? 
+- [ ] **3.** Polish plot #3 by updating the labels and theme (we'll cover theme modifications during [week 4 discussion section](../discussion/week4/week4-slides.qmd#theme){target="_blank"}, so you may consider holding off completing this step until then). List out the changes you made to your plot's theme (e.g. "updated axis text size", "removed minor gridlines", etc.; a bullet list is fine).
+- [ ] **4.** Describe two or more challenges you encountered while deciding on / creating your plots -- these can be conceptual (e.g. challenges in determining how to best represent your data) and / or technical (e.g. code-based challenges).
 - [ ] **5.** Add alt text to your final visualization following the formula discussed during [week 3's discussion section](../discussion/week3/week3-slides.qmd#alt-text-formula){target="_blank"} and using the `#| fig-alt:` code chunk option.
 
 ## Rubric (specifications)
 
 You must complete the following, as detailed below, to receive a "Satisfactory" mark for Assignment #2, Part I:
 
-**Complete the following steps in your GitHub Classroom repo (`eds240-hw2-username/Part1.qmd`):**
+::: {.callout-important}
+## Complete the following steps in your **GitHub Classroom repo** (`eds240-hw2-username/Part1.qmd`):
 
-- [ ] include your preferred name, and if you feel comfortable, your preferred pronouns in the author field of the `Part1.qmd` YAML
-- [ ] answer the three Part 1a questions, adhering to the length requirements specified at the end of each question prompt
-- [ ] create three different plots (two unpolished exploratory data visualizations and one polished final plot) in accordance with Part 1b instructions (**NOTE:** there isn't necessarily a single correct answer here, but your final plot should clearly display the variables of interest and you should be able to justify your choice in your written responses)
-- [ ] code should be clearly organized and annotated following conventions and guidelines outlined in the [Writing clean code](../../clean-code-guide.qmd){target="_blank"} page on the course website
-- [ ] answer the five Part 1b questions, adhering to the length requirements specified at the end of each question prompt
-- [ ] add alt text to your final visualization in accordance with Part 1b instructions
-- [ ] we should be able to run individual lines / chunks of code *and* render `Part1.qmd` without errors
-- [ ] all three plot outputs should appear in your rendered doc
-- [ ] push your completed `Part1.qmd` to GitHub via GitHub Classrooms by 11:59pm PT on Sat 02/01/2025
+Everyone receives one "free pass" for not submitting assignments via specified channels, after which you will receive a "Not Yet" mark.
+:::
+
+- [ ] Include your preferred name in the author field of the `Part1.qmd` YAML.
+- [ ] Review the background information provided in Part 1a, then import the data directly from the EDI data portal (as described)
+- [ ] Wrangle the data so that it's structured appropriately for addressing the question described in Part 1b (How does lobster size differ across each of the five coastal rocky reef SBC LTER sites for the years 2012 and 2022?).
+- [ ] Answer the three Part 1c questions. There is no set length requirement, but you must answer each question in full to receive a Satisfactory score.
+- [ ] Create three different plots (two can remain as unpolished exploratory data visualizations; one must be a polished final plot) in accordance with Part 1d instructions. 
+
+<!-- (**NOTE:** there isn't necessarily a single correct answer here, but your final plot should clearly display the variables of interest and you should be able to justify your choice in your written responses). -->
+
+::: {.callout-note}
+## You must choose an appropriate graphic form, given these data, *but* there isn't one single correct answer.
+
+Choosing an incorrect graphic form to present these data will result in a "Not Yet" score. However, there are numerous graphic forms that are appropriate! Your final plot should clearly display the variables of interest, and you should be able to justify your choice in your written responses.
+:::
+
+- [ ] Answer the five Part 1e questions. There is no set length requirement, but you must answer each question in full to receive a Satisfactory score.
+- [ ] Add appropriate alt text to your finalized visualization in accordance with Part 1e instructions.
+- [ ] All code (setup, data exploration, wrangling, and plotting code) should be clearly organized and annotated following conventions and guidelines outlined in the [Writing clean code](../../clean-code-guide.qmd){target="_blank"} page on the course website.
+- [ ] Code chunks should have the appropriate chunk options specified (e.g. suppress warnings and messages; don't print out long data frames, etc.).
+- [ ] We (instructor & TA) should be able to run individual lines / chunks of code *and* render `Part1.qmd` without errors.
+- [ ] All three plot outputs should appear in your rendered doc.
+- [ ] Push your completed `Part1.qmd` to GitHub via GitHub Classrooms by 11:59pm PT on Sat 02/01/2025.
 
 <br>
 
@@ -156,7 +167,7 @@ You must complete the following, as detailed below, to receive a "Satisfactory" 
 
 <br>
 
-# [Part II: Data wrangling & exploratory data viz using your own data]{.pink-text}
+# [Part II: Data wrangling & exploratory data viz using your chosen data]{.pink-text}
 
 ## Learning Outcomes
 
@@ -168,43 +179,45 @@ You must complete the following, as detailed below, to receive a "Satisfactory" 
 - write code from scratch and read and adapt code written by others
 - apply a DEI (Diversity, Equity & Inclusion) lens to the process of designing data visualizations 
 
-Read the description, below, for details on what to work on this week.
-
 ## Description 
+
+### 2a. Review HW #4 instructions
 
 [**Please begin by re-reading [HW #4](HW4.qmd) in full**]{.teal-text} as a reminder of the options, goals, and requirements for your final class assignment. 
 
-<!-- *A small part of each homework assignment will be dedicated to working on a series of data visualizations which will be due as part of Assignment #4 at the end of the quarter.* Assignment #4 will ask you to build three related, but different data visualizations -- all which will use the same data set(s), but present those data differently for three different audiences / purposes: -->
+### 2b. Import & wrangle data, then create exploratory data viz
 
-<!-- 1. **a visualization for a general audience (i.e. without domain expertise)** -- this data visualization may be designed to prompt conversation, clearly display findings (without the use of jargon), display findings in an atypical but creative way,  and / or may blend both art and science -->
-<!-- 2. **a visualization to be included in a paper, technical documentation, or report** -- this visualization should tell a story, but can include much more detail, more data, more domain-specific language, etc. -->
-<!-- 3. **a visualization that you could include in a presentation** -- you might imagine an audience with familiarity with your domain, but they only have a brief amount of time to process the information being presented; key takeaways should be clearly highlighted, and you may have multiple versions, each with an added layer (as if you're animating pieces of your visualization onto a slide)  -->
+[**This week, you’ll focus on importing and wrangling your data (found as part of [HW #1, Part II](HW1.qmd#hw1-p2)), followed by the exploratory data visualization phase. Complete the following:**]{.teal-text} 
 
-[**(Part 2a) This week, you’ll focus on importing / wrangling / and beginning the exploratory data visualization phase, using the data you found as part of [HW #1, Part II](HW1.qmd#hw1-p2). Complete the following:**]{.teal-text} 
-
-- [ ] Create an file named, `HW2-exploration.qmd` within your `lastName-eds240-HW4` repo and add appropriate YAML fields
-- [ ] Load necessary packages and read in your data
-- [ ] Clean & wrangle your data
+- [ ] Create an file named, `HW2-exploration.qmd` within your `lastName-eds240-HW4` repo and add appropriate YAML fields.
+- [ ] Load necessary packages and read in your data.
+- [ ] Clean & wrangle your data.
 - [ ] Create at least **three** (but of course feel free to create more!) exploratory visualizations (similar to plot #1 and #2 in Part I of this assignment). 
 - [ ] **IMPORTANT:** If you have a downloaded data file saved to your repo (e.g. you're not reading in your data directly from online, from a server, etc.) be sure to add your data folder / file to your `.gitignore`, particularly if this file is large.
 
-[**(Part 2b) After completing the above steps, answer the following questions:**]{.teal-text}
+### 2c. Answer questions 
 
-- [ ] **1.** What have you learned about your data? Have any potentially interesting patterns emerged? [**(5-8 sentences)**]{.peach-text}
-- [ ] **2.** In HW #1, you outlined some questions that you wanted to answer using these data. Have you made any strides towards answering those questions? If yes, how so? If no, what next steps do you need to take (e.g. I need to create X plot type, I still need to track down Y data, I need to restructure existing data so that you can visualize it in Z ways, etc.)? [**(8-12 sentences)**]{.peach-text}
-- [ ] **3.** What challenges do you foresee encountering with your data? These can be data wrangling and / or visualization challenges. [**(4-6 sentences)**]{.peach-text}
+[**After completing the above steps, answer the following questions:**]{.teal-text}
+
+- [ ] **1.** What have you learned about your data? Have any potentially interesting patterns emerged? 
+- [ ] **2.** In HW #1, you outlined some questions that you wanted to answer using these data. Have you made any strides towards answering those questions? If yes, how so? If no, what next steps do you need to take (e.g. I need to create X plot type, I still need to track down Y data, I need to restructure existing data so that you can visualize it in Z ways, etc.)? 
+- [ ] **3.** What challenges do you foresee encountering with your data? These can be data wrangling and / or visualization challenges. 
 
 ## Rubric (specifications)
 
 You must complete the following, as detailed below, to receive a "Satisfactory" mark for Assignment #2, Part II:
 
-**Complete the following steps under your `lastName-eds240-HW4` repo, *not* in GitHub Classrooms:**
+::: {.callout-important}
+## **Complete the following steps under your `lastName-eds240-HW4` repo, *not* in GitHub Classroom:**
+See details below.
+:::
 
-- [ ] perform all Part 2a steps, as described above, in `HW2-exploration.qmd`
-- [ ] answer Part 2b questions, also in `HW2-exploration.qmd`, adhering to the length requirements specified at the end of each question prompt
-- [ ] all three plot outputs should appear in your rendered doc
+- [ ] Perform all Part 2b steps (as described above) in your `HW2-exploration.qmd` file.
+- [ ] Answer Part 2c questions in your `HW2-exploration.qmd` file. There is no set length requirement, but you must answer each question in full to receive a Satisfactory score. 
+- [ ] All three plot outputs should appear in your rendered doc.
 - [ ] `HW2-exploration.qmd` should be neatly organized -- this does not need to be a perfectly polished document, but sections should be clearly labeled with prose and / or annotations so that we can easily follow along.
-- [ ] send Sam & Sevan a rendered version `HW2-exploration.qmd` by 11:59pm PT on Sat 02/03/2024 following these steps:
+- [ ] Code chunks should have appropriate chunk options set (e.g. code should render and execute, but warnings and messages should be suppressed, long data frames should not be printed out, etc.).
+- [ ] Send your instructor and TA a rendered version of your `HW2-exploration.qmd` file by 11:59pm PT on Sat 02/01/2025 following these steps:
   - [ ] ensure that your YAML specifies these options, at a minimum:
   
 ```{r}
@@ -221,21 +234,13 @@ format:
 ---
 ```
   
-  - [ ] **render** your `HW2-exploration.qmd` file and **verify** that you can open the resulting `HW2-exploration.html` file in your browser and that all formatting looks good
-  - [ ] **rename** your `.html` file so that it has your first initial / last name at the start (e.g. `SCsik-HW3-drafting-viz.html`), then **send** it to both Sevan and Sam on Slack via direct message
+  - [ ] **render** your `HW2-exploration.qmd` file, **verify** that you can open the resulting `HW2-exploration.html` file in your browser, and that all formatting looks good
+  - [ ] **rename** your `.html` file so that it has your first initial / last name at the start (e.g. `SCsik-HW3-drafting-viz.html`), then **send** it to both your instructor and TA on Slack via direct message
   
-<!-- - [ ] push your completed `HW2-exploration.qmd` to your repo by 11:59pm PT on Sat 02/03/2024 -->
-
 <br>
 
 ::: {.center-text .large-fa-icon .teal-text}
 {{< fa chart-column title="A column chart" >}} End Part II {{< fa chart-area title="An area chart" >}}
 :::
-
-<!-- <br> -->
-
-<!-- ::: {.center-text .body-text-m} -->
-<!-- **GitHub Classroom URL: <https://classroom.github.com/a/bb_tAOlI>** -->
-<!-- ::: -->
 
 
