--- a/course-materials/assignments/HW3.qmd
+++ b/course-materials/assignments/HW3.qmd
@@ -31,7 +31,7 @@ HW #3 will have you focus on making more progress towards completing your final 
 - If you chose [option 3](HW4.qmd#option-3){target="_blank"}, you should refer back to your approved proposal to determine how many questions you should list.
 :::
 
-- [ ] **3.** Explain which variables from your data set(s) you will use to answer your question(s).
+- [ ] **3.** Explain which variables from your data set(s) you will use to answer your question(s), and how.
 
 ::: {.callout-important}
 ## Important -- be specific here!
@@ -100,7 +100,10 @@ knitr::include_graphics("images/hand-drawn-plot.png")
 
 You must complete the following, as detailed below, to receive a "Satisfactory" mark for Assignment #3:
 
-**Complete the following steps under your `lastName-eds240-HW4` repo:**
+::: {.callout-important}
+## **Complete the following steps under your `lastName-eds240-HW4` repo, *not* in GitHub Classroom:**
+See details below.
+:::
 
 - [ ] Complete all work in a file named, `HW3-drafting-viz.qmd` -- you are welcome to draft / practice things in different files / scripts, but you must have all required elements of the assignment available in *this* file for us to reference and grade.
 - [ ] Add any necessary YAML options (title, author, date, etc.). You must also include the following options:
@@ -128,7 +131,7 @@ format:
 - Low-effort responses and plots will result in a "Not Yet" mark
 :::
 
-- [ ] Ensure all code chunks have the correct options set so that **(a)** code *and* outputs render, and **(b)** warnings and messages are suppressed (unless there is a reason to have them print). *Please note that rendered documents that don't have correctly specified chunk options will receive a "Not Yet" score.*
+- [ ] Ensure all code chunks have the correct options set so that **(a)** code *and* visualizations render, and **(b)** warnings and messages are suppressed (unless there is a reason to have them print). You should never print out entire data frames. *Please note that rendered documents that don't have appropriately specified chunk options will receive a "Not Yet" score.*
 - [ ] Code should be appropriately styled and annotated (please see [this resource](../../clean-code-guide.qmd){target="_blank"} on the course website), and your `.qmd` file should be easy to navigate.
 - [ ] When complete, **render** your `HW3-drafting-viz.qmd` file, **verify** that you can open the resulting `HW3-drafting-viz.html` file in your browser and that all formatting looks good. **Rename** your `.html` file so that it has your first initial / last name at the start (e.g. `SCsik-HW3-drafting-viz.html`), then **send** it to both Sloane and Sam on Slack via direct message by 11:59pm on Sat 02/22/2025.
 
