--- a/course-materials/assignments/HW4.qmd
+++ b/course-materials/assignments/HW4.qmd
@@ -92,17 +92,32 @@ Infographics are useful science communication pieces, which can serve a variety 
 - follow the [tidyverse style guide](https://style.tidyverse.org/){target="_blank"} (important styles are outlined on the [course website](../../clean-code-guide.qmd#general-conventions){target="_blank"})
 - organize and annotate code (see [these recommendations](../../clean-code-guide.qmd#annotating-code){target="_blank"})
 - apply the appropriate code chunk options (e.g. in most cases, code and outputs should be rendered but warnings and messages should not) -- see the Quarto documentation on [HTML Code Blocks](https://quarto.org/docs/output-formats/html-code.html){target="_blank"} and [Execution Options](https://quarto.org/docs/computations/execution-options.html){target="_blank"} for more
-  - (optional) you may consider applying the [`code-fold` option](https://quarto.org/docs/output-formats/html-code.html#folding-code){target="_blank"}, which can make scrolling past long code chunks easier 
+  - (optional) I recommend also applying the [`code-fold: true` option](https://quarto.org/docs/output-formats/html-code.html#folding-code){target="_blank"}, which collapses code chunks and makes it easier for readers to focus on your writing and embedded visualizations (while still allowing them to explore your code)
 
-[**You will also document your data design process and decisions in a short 1-2 page (~500-1,000 words) write up. Your writing should:**]{.teal-text}
+[**You will also share your data design process and decisions in a short, 1-2 page (~500-1,000 words) science communication blog post-style write up. Your writing should:**]{.teal-text}
 
-1. clearly state your question(s)
-2. describe your data (including your data source)
-3. address your approach and decisions for each of the ten design elements listed above (though you are welcome and encouraged to comment on any others that are not explicitly listed). If your visualizations do not include or consider a listed element(s), please comment on why (it's possible that not all ten elements will be applicable to *your* visualizations).
+1. include an engaging introduction paragraph(s), which states your motivation, question(s), data / data source(s), and goal(s) of your visualization. A few great examples:
+    - [Relationship between bee behavior and vineyard types in Germany](https://mwidas.github.io/blog-posts/2024-03-05-infographic-bees-wine/){target="_blank"}, by Melissa Widas (MEDS 2024)
+    - [Visualizing Millions of People on the Move](https://www.visualcinnamon.com/portfolio/urbanization/){target="_blank"}, by Nadieh Bremer
+    - [the Kuijpers familytree](https://www.studioterp.nl/my-family-a-visualization/){target="_blank"}, by Sonja Kuijpers
+2. address your approach and decisions for each of the ten design elements listed above (though you are welcome and encouraged to comment on any others that are not explicitly listed). If your visualizations do not include or consider a listed element(s), please comment on why (it's possible that not all ten elements will be applicable to *your* visualizations).
+
+::: {.callout-tip}
+## Storytelling helps to engage your readers
+
+Be sure to review the [EDS 296](https://ucsb-meds.github.io/EDS-296-DS-portfolios/course-materials/week4-writing-blogs.html){target="_blank"} materials on [writing data science blog posts](https://ucsb-meds.github.io/EDS-296-DS-portfolios/course-materials/materials/blogging-tips.html#/title-slide){target="_blank"} for tips on crafting a story and engaging your readers!
+:::
 
 [**You may submit your assignment in one of two ways:**]{.teal-text}
 
-1. A published Quarto document that is deployed using GitHub Pages
+1. As a blog post on your personal website -- check out the [Adding a blog to your existing Quarto website](https://samanthacsik.github.io/posts/2022-10-24-quarto-blogs/) materials for a refresher, if needed
+
+::: {.callout-tip}
+## Remember, this is an opportunity to grow your professional portfolio!
+Regardless of which of the two publishing options you choose, consider storytelling strategies for effective and engaging data science writing -- review the [Blogging for data science slides](https://ucsb-meds.github.io/EDS-296-DS-portfolios/course-materials/materials/blogging-tips.html#/title-slide){target="_blank"} from the [EDS 296-1F course materials](https://ucsb-meds.github.io/EDS-296-DS-portfolios/){target="_blank"} for guidance. **Remember**, this is an opportunity to grow your portfolio and showcase both your technical and communication skills (through data viz *and* writing). 
+:::
+
+2. A published Quarto document that is deployed using GitHub Pages
 
 ::: {.callout-note collapse=true}
 ## Instructions for publishing a Quarto doc using GitHub Pages
@@ -130,21 +145,15 @@ knitr::include_graphics("images/deployed.png")
 
 :::
 
-2. As a blog post on your personal website -- check out the [Adding a blog to your existing Quarto website](https://samanthacsik.github.io/posts/2022-10-24-quarto-blogs/) workshop materials for a refresher, if needed
-
-::: {.callout-tip}
-## Remember, this is an opportunity to grow your professional portfolio!
-Regardless of which of the two publishing options you choose, consider storytelling strategies for effective and engaging data science writing -- review the [Blogging for data science slides](https://ucsb-meds.github.io/EDS-296-DS-portfolios/course-materials/materials/blogging-tips.html#/title-slide){target="_blank"} from the [EDS 296-1F course materials](https://ucsb-meds.github.io/EDS-296-DS-portfolios/){target="_blank"} for guidance. **Remember**, this is an opportunity to grow your portfolio and showcase both your technical and communication skills (through data viz *and* writing). 
-:::
-
 ## Rubric (specifications)
 
 You must complete the following to receive a “Satisfactory” mark for Assignment #4:
 
 - [ ] Complete [option 1](HW4.qmd#option1-infographic), [option 2](HW4.qmd#option2-diff-audiences), or a pre-approved [option 3](HW4.qmd#option3-alternative).
-- [ ] All data visualizations should implement and / or address the ten design elements (listed above). It's up to you to decide how to consider, include, omit, and / or modify any of these elements.
+- [ ] All data visualizations should consider and implement (as appropriate) the ten design elements (listed above). It's up to you to decide how to consider, include, omit, and / or modify any of these elements.
+- [ ] You work must incorporate (or otherwise address in writing) any prior feedback from the instructor / TA. 
 - [ ] All code should be appropriately formatted and annotated, and code chunks should have the appropriate chunk options specified (e.g. suppress warnings and messages).
-- [ ] Describe your design process and decisions in a 1-2 page write-up, as described above
+- [ ] Describe your design process and decisions in a 1-2 page write-up, as described above.
 - [ ] Submit your work as either a published Quarto doc or as a blog post on your personal website.
-- [ ] Add the link to your published Quarto doc / blog post to [this Google Sheet](https://docs.google.com/spreadsheets/d/1tv32Ng_-QI1-eB5ws59HgCN0EoOpHe4UHX6qHhbQGds/edit#gid=0) by Saturday, 03/08/2025 11:59pm
-<!-- - [ ] present your visualizations to the class on [date] (finals week) -->
+- [ ] Add the link to your published Quarto doc / blog post to [this Google Sheet](https://docs.google.com/spreadsheets/d/1VizY_Yc1m_EwudpIHcCPHlFIo8BIXyoQzlcFg7FhRiw/edit?usp=sharing){target="_blank"} by Saturday, 03/08/2025 11:59pm.
+- [ ] Present your visualizations to the class on [date TBD] (finals week).
